--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "line-intersect": "^2.2.1",
     "line-intersection": "^1.0.9",
     "react": "^16.8.6",
+    "react-app-polyfill": "^1.0.1",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "socket.io": "^2.2.0"
