added toggle feature but ugly button despite adding bootstrap

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "gh-pages": "^2.0.1",
@@ -12,6 +13,7 @@
     "line-intersection": "^1.0.9",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.1",
+    "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "socket.io": "^2.2.0"
